--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mcullers.github.io/ClickyGame/",
+  "homepage": "https://mcullers.github.io/ClickyGame",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
